--- a/apps/passport-enquiries/views/choose-action.html
+++ b/apps/passport-enquiries/views/choose-action.html
@@ -27,7 +27,7 @@
             <span>{{#t}}fields.choose-action-complaint.options.make-enquiry.legend{{/t}}</span>
         </legend>
         <label class="block-label" for="make-enquiry-option">
-            <input type="radio" name="choose-action-complaint" id="make-enquiry-option"
+            <input type="radio" name="choose-action-complaint-radio" id="make-enquiry-option"
                    value="general-enquiries-option" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.make-enquiry.make-enquiry-option.label{{/t}}
         </label>
@@ -39,19 +39,19 @@
             <span>{{#t}}fields.choose-action-complaint.options.other-information.legend{{/t}}</span>
         </legend>
         <label class="block-label" for="other-information-renew">
-            <input type="radio" name="choose-action-complaint" id="other-information-renew"
+            <input type="radio" name="choose-action-complaint-radio" id="other-information-renew"
                    value="other-information-renew" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.other-information.other-information-renew.label{{/t}}
         </label>
 
         <label class="block-label" for="other-information-passport">
-            <input type="radio" name="choose-action-complaint" id="other-information-passport"
+            <input type="radio" name="choose-action-complaint-radio" id="other-information-passport"
                    value="other-information-passport" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.other-information.other-information-passport.label{{/t}}
         </label>
 
         <label class="block-label" for="other-information-lost-passport">
-            <input type="radio" name="choose-action-complaint" id="other-information-lost-passport"
+            <input type="radio" name="choose-action-complaint-radio" id="other-information-lost-passport"
                    value="other-information-lost-passport" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.other-information.other-information-lost-passport.label{{/t}}
         </label>
@@ -62,7 +62,7 @@
             <span>{{#t}}fields.choose-action-complaint.options.complaints.legend{{/t}}</span>
         </legend>
         <label class="block-label" for="choose-action-complaint-complaints">
-            <input type="radio" name="choose-action-complaint" id="choose-action-complaint-complaints"
+            <input type="radio" name="choose-action-complaint-radio" id="choose-action-complaint-complaints"
                    value="complaints" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.complaints.label{{/t}}
         </label>
@@ -73,7 +73,7 @@
             <span>{{#t}}fields.choose-action-complaint.options.general-enquiries.legend{{/t}}</span>
         </legend>
         <label class="block-label" for="general-enquiries-option">
-            <input type="radio" name="choose-action-complaint" id="general-enquiries-option"
+            <input type="radio" name="choose-action-complaint-radio" id="general-enquiries-option"
                    value="general-enquiries-option" aria-required="true">
             {{#t}}fields.choose-action-complaint.options.general-enquiries.general-enquiries-option.label{{/t}}
         </label>
