--- a/apps/passport-in-progress/views/whose-passport.html
+++ b/apps/passport-in-progress/views/whose-passport.html
@@ -1,5 +1,5 @@
 {{<layout}}
-{{$step}}Question 2{{/step}}
+{{$step}}Question 3{{/step}}
 {{$journeyHeader}}
 {{#t}}journeys.lost.header{{/t}}
 {{/journeyHeader}}
@@ -8,19 +8,17 @@
 {{> partials-navigation}}
 {{/propositionHeader}}
 
-{{$pageTitle}}{{#t}}pages.apply-online.header{{/t}}{{/pageTitle}}
+{{$pageTitle}}{{#t}}fields.whose-passport-radio.legend{{/t}}{{/pageTitle}}
 
 {{$content}}
-
-<p> {{#t}}pages.apply-online.header{{/t}} </p>
 
 
 {{<partials-form}}
 
 {{$form}}
 
-<fieldset id="apply-online-radio-group" class="buttonTrigger">
-  {{#radio-group}}apply-online-radio{{/radio-group}}
+<fieldset id="whose-passport-radio-group" class="buttonTrigger">
+  {{#radio-group}}whose-passport-radio{{/radio-group}}
 </fieldset>
 
 <input type="submit" value="Continue" class="button" disabled="true" id="input-submit">
