ROTM-18 partial implmentation of passport enquiries journey

--- a/apps/passport-in-progress/views/applicant-full-name.html
+++ b/apps/passport-in-progress/views/applicant-full-name.html
@@ -8,24 +8,24 @@
 {{> partials-navigation}}
 {{/propositionHeader}}
 
-{{$pageTitle}}{{#t}}pages.full-name.header{{/t}}{{/pageTitle}}
+{{$pageTitle}}{{#t}}pages.applicant-full-name.header{{/t}}{{/pageTitle}}
 
 {{$content}}
 
-<p> {{#t}}pages.full-name.header{{/t}} </p>
+<p> {{#t}}pages.applicant-full-name.header{{/t}} </p>
 
 
 {{<partials-form}}
 
 {{$form}}
 
-<fieldset id="full-name-radio-group" class="textTrigger">
+<fieldset id="applicant-full-name-radio-group" class="textTrigger">
 
   <legend class="visuallyhidden">
-    <span class="form-label-bold">{{#t}}fields.full-name-text.legend{{/t}}</span>
+    <span class="form-label-bold">{{#t}}fields.applicant-full-name-text.legend{{/t}}</span>
   </legend>
 
-  {{#input-text}}full-name-text{{/input-text}}
+  {{#input-text}}applicant-full-name-text{{/input-text}}
 
 </fieldset>
 
